login_aspect_ok

--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,208 +1,34 @@
-<section class="vh-1001 gradient-customs">
-  <div class="porcentaje ">
-    <div class=" ">
-      <div class=" ">
-        <div class="card bg-dark text-white" style="border-radius: 4px">
-          <div class="porcentaje text-center">
-            <div class="carta">
+<section class="section" >
+  <div class="container2 ">
+        <div class="backg" style="border-radius: 1rem;">
+
               <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-              <p class="text-white-50 mb-5">
-                Please enter your login and password!
-              </p>
+              <p class="text-white-50 mb-5">Please enter your login and password!</p>
 
               <div class="form-outline form-white mb-4">
-                <input
-                  type="email"
-                  id="typeEmailX"
-                  class="form-control form-control-lg"
-                />
+                <input type="email" id="typeEmailX" class="form-control form-control-lg" />
                 <label class="form-label" for="typeEmailX">Email</label>
               </div>
 
               <div class="form-outline form-white mb-4">
-                <input
-                  type="password"
-                  id="typePasswordX"
-                  class="form-control form-control-lg"
-                />
+                <input type="password" id="typePasswordX" class="form-control form-control-lg" />
                 <label class="form-label" for="typePasswordX">Password</label>
               </div>
 
-              <p class="small mb-5 pb-lg-2">
-                <a class="text-white-50" href="#!">Forgot password?</a>
-              </p>
+              <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
 
-              <button class="btn btn-outline-light btn-lg px-5" type="submit">
-                Login
-              </button>
+              <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
 
               <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                <a href="#!" class="text-white"
-                  ><i class="fab fa-facebook-f fa-lg"></i
-                ></a>
-                <a href="#!" class="text-white"
-                  ><i class="fab fa-twitter fa-lg mx-4 px-2"></i
-                ></a>
-                <a href="#!" class="text-white"
-                  ><i class="fab fa-google fa-lg"></i
-                ></a>
+                <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
+                <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
+                <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
               </div>
-            </div>
-
+            
             <div>
-              <p class="mb-0">
-                Don't have an account?
-                <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+              <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
               </p>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 </section>
-<!-- Section: Design Block --k>
-<section
-  class="text-center text-lg-start"
-  class="background-radial-gradient overflow-hidden"
->
-  <!k-- Jumbotron --k>
-  <div class="container py-4">
-    <div class="row g-0 align-items-center">
-      <div class="col-lg-6 mb-5 mb-lg-0">
-        <div
-          class="card cascading-right"
-          style="
-            background: hsla(0, 0%, 100%, 0.55);
-            backdrop-filter: blur(30px);
-          "
-        >
-          <div class="card-body p-5 shadow-5 text-center">
-            <h2 class="fw-bold mb-5">Regístrese ahora</h2>
-            
-            <form><!k--3;12(15)--k>
-
-              <!k-- 2 column grid layout with text inputs for the first and last names --k>
-              <div class="row">
-                <div class="col-md-6 mb-4">
-                  <div class="form-outline">
-                    <input
-                      type="text"
-                      id="form3Example1"
-                      class="form-control"
-                    />
-                    <label class="form-label" for="form3Example1">Nombre</label>
-                  </div>
-                </div>
-                <div class="col-md-6 mb-4">
-                  <div class="form-outline">
-                    <input
-                      type="text"
-                      id="form3Example2"
-                      class="form-control"
-                    />
-                    <label class="form-label" for="form3Example2"
-                      >Apellido</label
-                    >
-                  </div>
-                </div>
-              </div>
-
-              <!k-- Email input --k>
-              <div class="form-outline mb-4">
-                <input type="email" id="form3Example3" class="form-control" />
-                <label class="form-label" for="form3Example3"
-                  >Dirección de correo electrónico</label
-                >
-              </div>
-
-              <!k-- Password input --k>
-              <div class="form-outline mb-4">
-                <input
-                  type="password"
-                  id="form3Example4"
-                  class="form-control"
-                />
-                <label class="form-label" for="form3Example4">Contraseña</label>
-              </div>
-
-              <!k-- Checkbox --k>
-              <div class="form-check d-flex justify-content-center mb-4">
-                <input
-                  class="form-check-input me-2"
-                  type="checkbox"
-                  value=""
-                  id="form2Example33"
-                  checked
-                />
-                <label class="form-check-label" for="form2Example33">
-                  Quieres ser administrador
-                </label>
-              </div>
-
-              <!k-- Submit button --k>
-              <button type="submit" class="btn btn-primary btn-block mb-4">
-                ingresar
-              </button>
-
-            </form>
-
-            <!k-- Register buttons --k>
-              <div class="text-center">
-                <p>o regístrate con:</p>
-                <button type="button" class="btn btn-link btn-floating mx-1">
-                  <i class="fab fa-facebook-f"></i>
-                </button>
-
-                <button type="button" class="btn btn-link btn-floating mx-1">
-                  <i class="fab fa-google"></i>
-                </button>
-
-                <button type="button" class="btn btn-link btn-floating mx-1">
-                  <i class="fab fa-twitter"></i>
-                </button>
-
-                <button type="button" class="btn btn-link btn-floating mx-1">
-                  <i class="fab fa-github"></i>
-                </button>
-              </div>
-                
-            </form>--k>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-6 mb-5 mb-lg-0">
-        <img
-          src="https://mdbootstrap.com/img/new/ecommerce/vertical/004.jpg"
-          class="w-100 rounded-4 shadow-4"
-          alt=""
-        />
-      </div>
-    </div>
-  </div>
-  <!k-- Jumbotron --k>
-</section>
-<!k-- Section: Design Block --k>
-<!k--
-    <section class="form-main">
-  <div class="form-conte">
-    <div class="box">
-      <h3>Bienvenido</h3>
-      <form action="">
-        <div class="input-box">
-          <input type="text" placeholder="Email" class="input-control" />
-        </div>
-        <div class="input-box">
-          <input type="password" placeholder="password" class="input-control" />
-          <div class="input-link">
-            <a href="#" class="gradient-text">Has olvidado tu contraseña</a>
-          </div>
-        </div>
-        <button type="submit" class="btn">Iniciar Sesión</button>
-      </form>
-      <p>No tienes una cuenta? <a href="#"></a></p>
-    </div>
-  </div>
-</section>
--->
