--- a/src/app/componentes/login/login.component.css
+++ b/src/app/componentes/login/login.component.css
@@ -2,173 +2,67 @@
 html{
   margin: 0px;
 }
-.porcentaje .vh-1001{
-  display:contents;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
+.section{
+  padding: 0px;
+    /* fallback for old browsers */
+    background: #6a11cb;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+    
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
   height: 100vh;
 }
-.col-xl-5{
-  padding: 40px 100px;
+.container2{
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+}
+.backg{
+  background: #252525c5;
+  padding: 1rem;
+  margin: 0.5%;
+  width: 99%;
+  justify-content: center;
 }
 p.mb-0{
   padding: 10px;
+  border: rgb(255, 0, 221) solid 5px;
 }
-.form-control form-control-lg{
-  width: 600px;
+.form-control-lg{
+  margin: 10% 0% 0% 10%;
+  width: 80%;
+  border: red solid 5px;
 }
-.carta{
+.carta2{
   padding: 10px;
   margin-top: 30vh;
   margin-bottom: 30vh;
+  border: rgb(0, 255, 55) solid 5px;
 }
-.gradient-customs{
-  
-  /* fallback for old browsers */
-  background: #6a11cb;
-  
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-  
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
-
-  }
-/*.cascading-right {
-  margin-right: -50px;
-}
-.background-radial-gradient {
-  background-color: hsl(218, 41%, 15%);
-  background-image: radial-gradient(
-      650px circle at 0% 0%,
-      hsl(218, 41%, 35%) 15%,
-      hsl(218, 41%, 30%) 35%,
-      hsl(218, 41%, 20%) 75%,
-      hsl(218, 41%, 19%) 80%,
-      transparent 100%
-    ),
-    radial-gradient(
-      1250px circle at 100% 100%,
-      hsl(218, 41%, 45%) 15%,
-      hsl(218, 41%, 30%) 35%,
-      hsl(218, 41%, 20%) 75%,
-      hsl(218, 41%, 19%) 80%,
-      transparent 100%
-    );
-}
-
-@media (max-width: 991.98px) {
-  .cascading-right {
-    margin-right: 0;
-  }
-}
-----------------------------------------------------
-/*:root {
-  --green: hsl(162, 45%, 56%);
-  --plomo: hsl(162, 2%, 56%);
-  --blue: hsl(220, 85%, 57%);
-  --violet: hsl(272, 92%, 32%);
-  --tex-white: hsl(0, 0%, 100%);
-  --text-light-gray: hsl(0, 0%, 90%);
-  --body-bg-color: hsl(200, 54%, 12%);
-  --glass-bg-color: hsla(0, 0%, 100%, 0.05);
-  --boder-color: hsla(0, 0%, 100%, 0.25);
-  --blur: blur(10px);
-  --button-hover-color: hsla(0, 0%, 8%, 0.3);
-}
-
 section {
-  background-color: var(--body-bg-color);
-  color: var(--text-light-gray);
-  font-family: "Poppins", sans-serif;
-  overflow-x: hidden;
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 1.5;
-}
-
-section::after,
-section::before {
-  content: "";
-  position: fixed;
-  height: 400px;
-  width: 400px;
-  border-radius: 50%;
-  z-index: -1;
-  filter: blur (150px);
-  opacity: 0.5;
-}
-section::before {
-  background-color: var(--blue);
-  left: 0;
-  bottom: 0;
-  transform: translate(-50%);
-}
-section::after {
-  background-color: var(--violet);
-  right: 0;
-  top: 0;
-  transform: translate(50);
-}
-.form-main {
-  min-height: 100vh;
-  padding: 60px 15px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.form-content {
-  width: 100%;
-  max-width: 450px;
-  position: relative;
-  z-index: 1;
-}
-
-.form-content .box {
-  border-color: var(--glass-bg-color);
-  border: 1px solid var(--border-color);
-  padding: 40px 50px;
-  border-radius: 20px;
-  backdrop-filter: var(--blur);
-}
-
-.form-content h3 {
-  font-size: 28px;
-  text-align: center;
-  line-height: 1.2;
-  color: var(--tex-white);
-  font-weight: 500;
-}
-
-.form-content form {
-  margin: 25px 0 20px;
-}
-
-.form-content .input-box {
-  margin: 25px;
-}
-
-.form-content .input-control {
-  display: block;
-  height: 45px;
-  width: 100%;
-  background-color: transparent;
-  border: none;
-  border-bottom: 1px solid var(--border-color);
-  color: inherit;
-  font-weight: inherit;
-  font-family: inherit;
-  font-size: 16px;
-}
-
-.form-content .input-control:focus {
-  outline: none;
-}
-
-.form-content .input-link {
-  margin-top: 10px;
-  text-align: right;
-}
-*/
+  border: rgb(15, 226, 61) solid 5px;
+  justify-content: space-between;
+  }
+  @media (min-width: 800px) {
+    .backg{
+      padding: 1rem;
+      width: 800px;
+    }
+    .container2{
+      margin: 50px;
+    }
+  }
+  @media (min-width: 720px) {
+    .backg{
+      padding: 1rem;
+      width: 600px;
+    }
+    .container2{
+      margin: 10px;
+    }
+    .section {
+      height: 1000px;
+    }
+  }
