--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,10 +1,32 @@
-<section class="section" >
+<section class="section2" >
   <div class="container2 ">
         <div class="backg" style="border-radius: 1rem;">
 
               <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-              <p class="text-white-50 mb-5">Please enter your login and password!</p>
+              <p class="text-white-50 mb-5">¡Por favor, introduzca su nombre de usuario y contraseña!</p>
 
+              <!---->
+              <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+        
+                <div class="form-outline form-white mb-4">
+                  <input type="email" class="form-control" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg" [(ngModel)]="nombreUsuario" name="nombreUsuario" required/>
+                  <label class="form-label" for="nombreUsuario">Usuario</label>
+                </div>
+        
+                <div class="form-outline form-white mb-4">
+                  <input type="password" id="password" class="form-control form-control-lg" [(ngModel)]="password" name="password" required />
+                  <label class="form-label" for="password">Contraseña</label>
+                </div>
+        
+                <button class="btn btn-outline-light btn-lg px-5" type="submit">
+                  INGRESO
+                </button>
+        
+              </form>
+              <!---->
+
+
+              <!--
               <div class="form-outline form-white mb-4">
                 <input type="email" id="typeEmailX" class="form-control form-control-lg" />
                 <label class="form-label" for="typeEmailX">Email</label>
@@ -24,11 +46,14 @@
                 <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
                 <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
               </div>
+              -->
             
             <div>
-              <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+
+              <p class="mb-0">Necesitas una cuenta? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
               </p>
             </div>
         </div>
     </div>
+
 </section>
